--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="" /> 
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
     <style type="text/css">
-     #map { height: 400px; }
+     #map { height: 700px; }
     </style>
 		<script type="text/javascript" src="js/lib/leaflet.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -31,7 +31,7 @@ function load(data) {
       Add street names
     </header>
 		<div id="map"></div>
-		<script type="text/javascript" src="streets.geojson"></script>
+		<script type="text/javascript" src="export.geojson"></script>
 		<script type="text/javascript" src="js/map-init.js"></script>
 	</body>
 </html>
