--- a/index.html
+++ b/index.html
@@ -10,24 +10,50 @@
     <style type="text/css">
      #map { height: 700px; }
     </style>
-    <script type='text/javascript'>
-      // var L_PREFER_CANVAS = true;
-    </script>
 		<script type="text/javascript" src="js/lib/leaflet.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript">
-    
-function load(data) {
-  streetList = data;
-}
+      $(function() {
+
+        function initialize(streetList) {
+
+          //Initialize the map with a starting view and a generous maximum boundary
+          var map = L.map('map',{
+            maxBounds: [[46.6412301,23.4324747],[46.9201137,23.8047838]]
+          })
+          .fitBounds([[46.7412301, 23.53816],[46.76813, 23.59253]]);                  
+
+          var AltTiles = 'http://b.www.toolserver.org/tiles/bw-mapnik/{z}/{x}/{y}.png';
+          var StamenTiles = 'http://a.tile.stamen.com/toner-lite/{z}/{x}/{y}.png';
+          //Background tiles
+          L.tileLayer(StamenTiles).addTo(map);
+          L.geoJson(streetList.features, {
+              style: function(feature) {
+                  return { color: "#CC0000" };
+              },
+              onEachFeature: function(feature,layer) {
+                  layer
+                    .on('mouseover', function() {
+                        this.setStyle({
+                            color: "#000000"
+                        });
+                    })
+                    .on('mouseout', function() {
+                      this.setStyle({
+                        color: "#CC0000"
+                      });
+                    });
+              }
+          }).addTo(map);
+        };
+
+        $.getJSON('json/streets.json', function(resp) {
+          initialize(resp);
+        });
+      });
     </script>
 	</head>
 	<body>
-    <header>
-      Add street names
-    </header>
 		<div id="map"></div>
-		<script type="text/javascript" src="merged-streets.json"></script>
-		<script type="text/javascript" src="js/map-init.js"></script>
 	</body>
 </html>
