Use Alternative bw tiles rather than outdated stamen tiles.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			//Background tiles
 			var AltTiles = 'http://b.www.toolserver.org/tiles/bw-mapnik/{z}/{x}/{y}.png';
 			var StamenTiles = 'http://a.tile.stamen.com/toner-lite/{z}/{x}/{y}.png';
-			L.tileLayer(StamenTiles).addTo(map);
+			L.tileLayer(AltTiles).addTo(map);
 
 			// Test streets with historical maps overlay.
 			var myTiles = '../historical-maps/img/1869/{z}/{x}/{y}.png';
